@@ -71,6 +71,7 @@ nant=net.sourceforge.cruisecontrol.builders.NantBuilder
 pause=net.sourceforge.cruisecontrol.PauseBuilder
 phing=net.sourceforge.cruisecontrol.builders.PhingBuilder
 rake=net.sourceforge.cruisecontrol.builders.RakeBuilder
+xcode=net.sourceforge.cruisecontrol.builders.XcodeBuilder
 
 # label incrementer -- only one per project
 labelincrementer=net.sourceforge.cruisecontrol.labelincrementers.DefaultLabelIncrementer
